--- a/res/xml/update_workspace.xml
+++ b/res/xml/update_workspace.xml
@@ -26,8 +26,8 @@
         launcher:x="0"
         launcher:y="0" />
     <favorite
-        launcher:packageName="com.android.contacts"
-        launcher:className="com.android.contacts.activities.PeopleActivity"
+        launcher:packageName="com.cyanogenmod.eleven"
+        launcher:className="com.cyanogenmod.eleven.ElevenApplication"
         launcher:container="-101"
         launcher:screen="1"
         launcher:x="1"
@@ -36,7 +36,7 @@
         launcher:packageName="com.android.mms"
         launcher:className="com.android.mms.ui.ConversationList"
         launcher:container="-101"
-        launcher:screen="3"
+        launcher:screen="1"
         launcher:x="3"
         launcher:y="0" />
     <favorite
